# ameli-rs

./: .gitignore  AGENTS.md  Cargo.toml  mypi-config.yaml  mypi.yaml
crates/ameli-agent/: Cargo.toml
crates/ameli-agent-core/: Cargo.toml
crates/ameli-agent-core/src/: agent.rs  agent_loop.rs  types.rs
crates/ameli-agent/src/: agent.rs  agent_loop.rs  agent_session.rs  error.rs  interface.rs  lib.rs  session.rs  session_manager.rs  storage.rs  types.rs
crates/ameli-agent/src/auth_storage/: mod.rs
crates/ameli-agent/src/extension/: context.rs  events.rs  mod.rs  runner.rs
crates/ameli-agent/src/session_manager/: error.rs  in_memory.rs  manager.rs  mod.rs  types.rs
crates/ameli-ai/: Cargo.toml
crates/ameli-ai/src/: api.rs  lib.rs  provider.rs  stream.rs  types.rs  validation.rs
crates/ameli-ai/src/built_in_apis/: mod.rs
crates/ameli-ai/src/built_in_apis/openai_completions/: api.rs  compat.rs  json.rs  messages.rs  mod.rs
crates/ameli-auth-storage/: Cargo.toml
crates/ameli-auth-storage/src/: lib.rs
crates/ameli-cli/: Cargo.toml
crates/ameli-cli/src/: cli.rs  main.rs
crates/ameli-extension-factory/: Cargo.toml
crates/ameli-extension-factory/src/: factory.rs  lib.rs  template.rs
crates/ameli-extension-factory/src/built_in/: mod.rs
crates/ameli-extension-factory/src/utils/: mod.rs
crates/ameli-model-registry/: Cargo.toml  providers.json
crates/ameli-model-registry/src/: built_in.rs  lib.rs  models.json
crates/ameli-multi-agent-resource-loader/: Cargo.toml
crates/ameli-multi-agent-resource-loader/src/: error.rs  lib.rs
crates/ameli-provider-openai/: Cargo.toml
crates/ameli-provider-openai/src/: compat.rs  json.rs  lib.rs  messages.rs  provider.rs  types.rs
crates/ameli-session-manager/: Cargo.toml
crates/ameli-session-manager/src/: in_memory.rs  lib.rs  manager.rs
