[lints]
workspace = true

[package]
name = "ameli-agent-core"
version.workspace = true   # Inherits version "0.1.0" from root
edition.workspace = true   # Inherits "2021" from root
rust-version.workspace = true

[dependencies]

# External crates inherited from the root workspace
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
futures = { workspace = true }

# Workspace crates
ameli-ai = { path = "../ameli-ai" }

# Cancellation token (Rust equivalent of AbortSignal)
tokio-util = { version = "0.7", features = ["rt"] }