[lints]
workspace = true

[package]
name = "ameli-agent"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]

# Workspace crates
ameli-agent-core = { path = "../ameli-agent-core" }
ameli-ai = { path = "../ameli-ai" }
ameli-model-registry = { path = "../ameli-model-registry" }

# External crates inherited from the root workspace
anyhow = { workspace = true }
chrono = { version = "0.4", features = ["serde"] }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-util = { version = "0.7", features = ["rt"] }
tracing = { workspace = true }

[dev-dependencies]
temp-env = "0.3"
