[lints]
workspace = true

[package]
name = "ameli-ai"
version.workspace = true   # Inherits version "0.1.0" from root
edition.workspace = true   # Inherits "2021" from root
rust-version.workspace = true

[dependencies]

# External crates inherited from the root workspace
serde = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
jsonschema = { workspace = true }
serde_json = { workspace = true }
futures = { workspace = true }
reqwest = { version = "0.12", default-features = false, features = ["stream", "json", "rustls-tls"] }