[package]
name = "ameli-auth-storage"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
thiserror = { workspace = true }

[dev-dependencies]
temp-env = "0.3"
tokio = { workspace = true }

[lints]
workspace = true
