[package]
name = "ameli-model-registry"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
ameli-ai = { path = "../ameli-ai" }
thiserror = { workspace = true }
tracing = { workspace = true }

[lints]
workspace = true
