[lints]
workspace = true

[package]
name = "ameli-multi-agent-resource-loader"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
ameli-agent = { path = "../ameli-agent" }
ameli-agent-core = { path = "../ameli-agent-core" }
thiserror = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
