[package]
name = "ameli-provider-openai"
version.workspace = true
edition.workspace = true

[dependencies]
ameli-ai = { path = "../ameli-ai" }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
futures = { workspace = true }
reqwest = { version = "0.12", default-features = false, features = ["stream", "json", "rustls-tls"] }
