[package]
name = "ameli-session-manager"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
ameli-agent-core = { path = "../ameli-agent-core" }
ameli-ai = { path = "../ameli-ai" }

thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
chrono = { version = "0.4", features = ["serde"] }

[lints]
workspace = true
